# AIEditor

./: .env.example  .gitignore  PROJECT.md  README.md  aiedit.db  docker-compose.yml  pyproject.toml  rewrite_reel_routes_ui.py  rewrite_routes_ui.py  update_reel_routes_js.py  update_routes_js.py
app/: __init__.py  captions.py  config.py  constants.py  container.py  db.py  errors.py  experiment_tracking.py  hook_catalog.py  hook_extraction.py  main.py  media.py  models.py  premiere.py  prompts.py  providers.py  queueing.py  reel_prompts.py  schemas.py  services.py  storage.py  tasks.py
app/api/: reel_routes.py  routes.py
docs/: evaluation-plan.md  wandb-mcp.md
output/hooks/: viral_hooks.json
tests/: conftest.py  test_api.py  test_auto_cut_captions.py  test_captions.py  test_hook_extraction.py  test_hook_extraction_labels.py  test_hook_selection.py  test_media.py  test_providers.py  test_reel_api.py  test_reel_hook_api.py
tmp/wandb_check/wandb/: latest-run
wandb/: latest-run
wandb/run-20260228_201834-0q06b4xw/: run-0q06b4xw.wandb
wandb/run-20260228_202305-89ovz5h7/: run-89ovz5h7.wandb
wandb/run-20260228_210653-sdz0n6i4/: run-sdz0n6i4.wandb
wandb/run-20260228_214418-1b96ov7u/: run-1b96ov7u.wandb
wandb/run-20260228_221040-9crpfzh7/: run-9crpfzh7.wandb
wandb/run-20260228_223337-2d3yvgjc/: run-2d3yvgjc.wandb
wandb/run-20260228_233847-7rf3xz2r/: run-7rf3xz2r.wandb
wandb/run-20260228_234959-9i1g9mms/: run-9i1g9mms.wandb
wandb/run-20260228_235924-swhvrzuo/: run-swhvrzuo.wandb
wandb/run-20260301_000754-lem2yofg/: run-lem2yofg.wandb
(+13 files in other folders)
