[project]
name = "aiedit-feature4"
version = "0.1.0"
description = "Async English caption cleanup and persona rewrite API"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.37.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pypdf>=5.0.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.38",
  "uvicorn>=0.34.0",
  "wandb>=0.24.0",
  "moviepy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
